name:                  statgrab
version:               0.1.0
synopsis:              Pending
homepage:              http://github.com/brendanhay/statgrab
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2013 Brendan Hay
stability:             Experimental
category:              System, Monitoring, FFI
build-type:            Simple
cabal-version:         >= 1.10

description:
    Pending

extra-source-files:
    README.md

source-repository head
    type:     git
    location: git://github.com/brendanhay/statgrab.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src

    exposed-modules:
        System.Statgrab
      , System.Statgrab.Base

    ghc-options:
        -Wall
        -rtsopts
        -fwarn-tabs
        -funbox-strict-fields

    build-depends:
        base >= 4 && < 5

    extra-libraries:
        statgrab

    includes:
        statgrab.h
